# weather-station-rs

./: Cargo.toml  README.md
.cargo/: config.toml
src/: lib.rs  main.rs  radio.rs  wind_sensor.rs
