[package]
name = "weather-station-rs"
version = "0.1.0"
edition = "2021"


[dependencies]
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
	"task-arena-size-98304",
	"arch-cortex-m",
	"executor-thread",
	"executor-interrupt",
	"defmt",
	"integrated-timers",
] }
embassy-time = { version = "0.3.1", features = [
	"defmt",
	"defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2.0", features = [
	"defmt",
	"unstable-pac",
	"time-driver",
	"critical-section-impl",
] }
embassy-futures = { version = "0.1.0" }
cyw43 = { version = "0.1.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.1.0", features = ["defmt", "overclock"] }

defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

# cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "0.3", features = ["print-defmt"] }

heapless = "0.7"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async"] }

embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"

weather-station-lib-rs = { path = "../weather-station-lib-rs" }
bme280 = { version = "0.5.1", features = ["defmt"] }
postcard = {version = "1.0.8", features = ["heapless"] }
serde = { version = "1.0.*", default-features = false }

rfm69 = {path = "../rfm69"}



[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
